--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "primevue": "^4.2.3",
+    "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.5.12"
   },
   "devDependencies": {
@@ -21,6 +23,7 @@
     "eslint": "^9.14.0",
     "eslint-plugin-vue": "^9.30.0",
     "postcss": "^8.4.49",
+    "postcss-import": "^16.1.0",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10",
