--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.2.4",
+    "primeicons": "^7.0.0",
     "primevue": "^4.2.3",
     "tailwindcss-primeui": "^0.3.4",
     "vue": "^3.5.12"
